# poetry-template

./: .editorconfig  .flake8  .gitignore  mypy.ini  pyproject.toml
.github/: flake8_error.json  flake8_warning.json
.github/ISSUE_TEMPLATE/: 01_enhancement.md  02_bug.md
.github/workflows/: lint.yml
src/: hello.py
src/tests/: hello_test.py
