[tool.poetry]
name = "poetry-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
flake8 = "^3.9.2"
flake8-docstrings = "^1.6.0"
flake8-print = "^4.0.0"
flake8-quotes = "^3.2.0"
isort = "^5.8.0"
mypy = "^0.812"
pdoc = "^7.0.0"
poethepoet = "^0.10.0"
pytest = "^6.2.4"
pytest-cov = "^2.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
