[tool.poetry]
name = "poetry-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
flake8-docstrings = "^1.6.0"
flake8-print = "^4.0.0"
flake8-quotes = "^3.3.1"
isort = "^5.10.1"
mypy = "^0.942"
poethepoet = "^0.13.1"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"

[tool.black]
line-length = 79
target-version = ["py310"]

[tool.isort]
line_length = 79
multi_line_output = 3

[tool.poe.tasks]
flake8 = "flake8 ."
isort = "isort . -c"
mypy = "mypy ."
lint = ["flake8", "isort", "mypy"]
black = "black ."
isort_format = "isort ."
format = ["black", "isort_format"]
test = "pytest"
cov = "pytest --cov=src --cov-report=html --cov-report=term"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
